- implemented multiple togglable fieldsets for configuration windows - rearranged fields in configuration windows - implemented advanced possibilities for options columns filtering - various fixes for the options sources - some code cleanup

--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -73,6 +73,7 @@
 "Auto-generated Class Files","Fichiers de classe auto-générés"
 "Available variables : <strong>{is_eu_country}</strong>, <strong>{country_code}</strong>, <strong>{country_name}</strong><br />(variables will be replaced by the corresponding values).<br />If no value is set, ""{is_eu_country}"" will be used by default","Variables disponibles : <strong>{is_eu_country}</strong>, <strong>{country_code}</strong>, <strong>{country_name}</strong><br />(les variables seront remplacées par les valeurs correspondantes).<br />Si aucune valeur n'est renseignée, ""{is_eu_country}"" sera utilisé par défaut"
 "Back","Retour"
+"Background Colors","Couleurs de fond"
 "Base Class","Classe de base"
 "Base Configuration","Configuration - Base"
 "Base Display Format","Format d'affichage de base"
@@ -149,6 +150,8 @@
 "Copy To","Copier vers"
 "Copy To Existing Profile","Copier vers un profil existant"
 "Copy To New Profile","Copier vers un nouveau profil"
+"Could not apply the multiple filter","Impossible d'appliquer le filtre multiple"
+"Could not apply the multiple filter : ""%s""","Impossible d'appliquer le filtre multiple : ""%s"""
 "Could not apply the regex filter","Impossible d'appliquer le filtre regex"
 "Could not apply the regex filter : ""%s""","Impossible d'appliquer le filtre regex : ""%s"""
 "Could not assign the specified profile","Impossible d'assigner le profil spécifié"
@@ -159,6 +162,7 @@
 "Could not get reflected value for ""%s""","Impossible d'obtenir une valeur de réflexion pour ""%s"""
 "Could not go to the specified profile","Impossible d'aller au profil spécifié"
 "Could not inject regex","Impossible d'injecter la regex"
+"Could not inject the multiple conditions","Impossible d'injecter les conditions multiples"
 "Could not reload the grid. Please reload it manually to apply any change","Impossible de recharger la grille. Veuillez la recharger manuellement pour appliquer les changements"
 "Could not write to the file","Impossible d'écrire dans le fichier"
 "Country","Pays"
@@ -292,6 +296,7 @@
 "Failed to save the value : ""%s""","Echec de la sauvegarde de la valeur : ""%s"""
 "Fax","Fax"
 "Field Name","Nom du champ"
+"Fields","Champs"
 "Filter","Filtre"
 "Filter images on name","Filtrer les images sur le nom"
 "Filter Mode","Mode de filtrage"
@@ -301,6 +306,7 @@
 "Filter on Item SKU","Filtrer sur la référence des articles"
 "Filtered products will have to belong to a number of categories amongst the chosen ones, that can be verified using this value and the one from the ""Custom Filter - Operator"" field","Les produits filtrés devront appartenir à un nombre de catégories parmi celles choisies, qui peut être vérifié en utilisant cette valeur et celle du champ ""Filtre personnalisé - Opérateur"""
 "Filtered products will have to belong to a number of categories amongst the chosen ones, that can be verified using this value and the one from the ""Custom Filter - Number"" field","Les produits filtrés devront appartenir à un nombre de catégories parmi celles choisies, qui peut être vérifié en utilisant cet opérateur et celle du champ ""Filtre personnalisé - Nombre"""
+"Filtering","Filtrage"
 "Filters","Filtres"
 "First Name","Prénom"
 "Flat Value Key","Clé de la valeur à plat"
@@ -339,7 +345,9 @@
 "If needed, indicate here the level on which to stop ascent for the full paths display. At least one level will be displayed in all cases, even if the concerned category has a lower level","Si besoin, indiquez ici le niveau sur lequel arrêter la remontée dans les chemins complets. Au moins un niveau sera affiché dans tous les cas, même si la catégorie concernée a un niveau inférieur"
 "If no currency is found with choosen column, then base currency will be used","Si aucune devise n'est trouvée avec la colonne choisie, alors la devise de base sera utilisée"
 "If no ID is found, then the value corresponding to the given key will be displayed. If none is set, ""store_name"" will be used","Si aucun identifiant n'est trouvé, alors la valeur correspondant à la clé donnée sera affichée. Si rien n'est renseigné, ""store_name"" sera utilisé"
+"If no value is set, "" - "" will be used","Si aucune valeur n'est définie, "" - "" sera utilisé"
 "If no value is set, "","" will be used","Si aucune valeur n'est définie, "","" sera utilisé"
+"If no value is set, "", "" will be used","Si aucune valeur n'est définie, "", "" sera utilisé"
 "If no value is set, then the base display format will be used","Si aucune valeur n'est renseignée, le format d'affichage de base sera utilisé"
 "If you choose ""No"", filter will apply on images existence","Si vous choisissez ""Non"", le filtre s'appliquera à l'existence des images"
 "If you choose ""No"", only the images paths within the media/catalog directory will be displayed","Si vous choisissez ""Non"", seulement les chemins des images dans le répertoire media/catalog seront affichés"
@@ -373,6 +381,7 @@
 "List","Liste"
 "Log Error Messages","Logger les messages d'erreur"
 "Log Error Messages If Rewrite Success","Logger les messages d'erreur si succès de la réécriture"
+"Logical Operator","Opérateur logique"
 "Long","Long"
 "Magento Model","Modèle Magento"
 "Manage Custom Grids","Gérer les grilles personnalisées"
@@ -393,6 +402,7 @@
 "Model","Modèle"
 "Module Name","Nom du module"
 "More Options","Plus d'options"
+"Multiple Values","Valeurs multiples"
 "Must be a valid CSS color","Doit être une couleur CSS valide"
 "Must be exactly one character. If none is set, no wildcard of this kind will be available at all","Doit être exactement un caractère. Si rien n'est renseigné, aucune wildcard de ce type ne sera disponible"
 "Must be exactly one character, differing from the wildcard for single character. If no valid value is set, no wildcard of this kind will be available at all","Doit être exactement un caractère, différent de la wildcard pour un seul caractère. Si aucune valeur valide n'est renseignée, aucune wildcard de ce type ne sera disponible"
@@ -498,6 +508,7 @@
 "Short","Court"
 "Show Missing Option Values","Afficher les valeurs ne correspondant pas à une option"
 "Show Number Sign","Afficher le signe du nombre"
+"Single Value","Valeur seule"
 "Singleton","Singleton"
 "Size:","Taille :"
 "Skip ""All Store Views"" Label","Passer le libellé ""Toutes les vues magasin"""
@@ -517,6 +528,7 @@
 "Store View:","Vue magasin :"
 "Store Views","Vues magasin"
 "Street Address","Adresse"
+"Sub-Values Separator","Séparateur de sous-valeurs"
 "Suffix","Suffixe"
 "Suffix that will be appended to the values coming from config","Suffixe qui sera ajouté aux valeurs venant de la configuration"
 "System","Système"
@@ -528,6 +540,7 @@
 "Telephone","Téléphone"
 "Terms and Conditions","Conditions générales de vente"
 "Text","Texte"
+"Text Colors","Couleurs de texte"
 "The ""%s"" custom column could not be applied : ""%s""","La colonne personnalisée ""%s"" n'a pû etre appliquée : ""%s"""
 "The ""Mage_CatalogInventory""" module is disabled","Le module ""Mage_CatalogInventory"" est désactivé"
 "The base profile can not be assigned","Le profil de base ne peut pas être assigné"
@@ -614,6 +627,7 @@
 "Use Default Value","Utiliser la valeur par défaut"
 "Use drag'n'drop for sorting columns","Utiliser le drag'n'drop pour le tri des colonnes"
 "Use Grid Store View","Vue magasin de la grille"
+"Used for attributes with multiple values","Utilisé pour les attributs à multiples valeurs"
 "Used when image dimensions are specified.<br />If you choose ""Yes"", the original full-size images will be used and resized, when needed, by your web browser only (regarding images URLs, only the original ones will likewise be displayed in all cases)","Utilisé quand les dimensions d'image sont spécifiées.<br />Si vous choisissez ""Oui"", les images originales de pleine grandeur seront utilisées et redimensionnées, quand c'est nécessaire, par votre navigateur web seulement (concernant les URLs d'images, seulement celles originales seront affichées également)"
 "User default profile","Profil par défaut de l'utilisateur"
 "Users","Utilisateurs"
