--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -98,7 +98,7 @@
 "Choose ""<strong>Yes</strong>"" if the field contains multiple values separated by a given string","Choisissez ""<strong>Oui</strong>"" si le champ contient de multiples valeurs séparées par une chaîne donnée"
 "Choose ""<strong>Yes</strong>"" if you do not want the field labels to be displayed in the header","Choissez ""<strong>Oui</strong>"" si vous ne voulez pas que les libellés des champs soient affichés en en-tête"
 "Choose ""<strong>Yes</strong>"" to display IDs instead of names","Choisissez ""<strong>Oui</strong>"" pour afficher les identifiants plutôt que les noms"
-"Choose ""<strong>Yes</strong>"" to filter on products that use system configuration values or not. Else, the filter type will depend on the type of the field","Choisissez ""<strong>Oui</strong>"" pour filtrer sur les produits utilisant les valeurs de la configuration système ou pas. Sinon, le type de filtre dépendra de celui du champ"
+"Choose ""<strong>Yes</strong>"" to filter on products that use system configuration values or not. Else, the filter type will depend on the type of the field","Choisissez ""<strong>Oui</strong>"" pour filtrer sur les produits utilisant les valeurs de la configuration système. Sinon, le type de filtre dépendra de celui du champ"
 "Choose ""<strong>Yes</strong>"" to make the base pagination values be added to the custom ones","Choisissez ""<strong>Oui</strong>"" pour que les valeurs de pagination de base soient ajoutées à celles personnalisées"
 "Choose ""<strong>Yes</strong>"" to use a custom source of EU countries.<br /><strong>For Magento versions < 1.7, you should always use this option as there is no base EU countries list by default</strong>","Choisissez ""<strong>Oui</strong>"" pour utiliser une source personnalisée de pays de l'UE.<br /><strong>Pour les versions de Magento < 1.7, vous devriez toujours utiliser cette option étant donné qu'il n'existe aucune liste de pays de l'UE par défaut</strong>"
 "Choose a processor if you want the CMS content to be treated. Unless you know there is a difference, you can consider that both block and page template processors are the same","Choisissez un processeur si vous voulez que le contenu CMS soit traité. A moins que vous ne sachiez qu'il y a une différence, vous pouvez considérer les deux processeurs comme équivalents"
@@ -298,6 +298,7 @@
 "Filter mode shortcut is not enabled (used in ""%s"")","Le raccourci pour le mode de filtrage n'est pas activé (utilisé dans ""%s"")"
 "Filter on Item Name","Filtrer sur le nom des articles"
 "Filter on Item SKU","Filtrer sur la référence des articles"
+"Filter on ""Use Config""","Filtrer sur ""Utiliser les paramètres de la configuration"""
 "Filtered products will have to belong to a number of categories amongst the chosen ones, that can be verified using this value and the one from the ""<strong>Custom Filter - Operator</strong>"" field","Les produits filtrés devront appartenir à un nombre de catégories parmi celles choisies, qui peut être vérifié en utilisant cette valeur et celle du champ ""<strong>Filtre personnalisé - Opérateur</strong>"""
 "Filtered products will have to belong to a number of categories amongst the chosen ones, that can be verified using this value and the one from the ""<strong>Custom Filter - Number</strong>"" field","Les produits filtrés devront appartenir à un nombre de catégories parmi celles choisies, qui peut être vérifié en utilisant cet opérateur et celle du champ ""<strong>Filtre personnalisé - Nombre</strong>"""
 "Filtering","Filtrage"
@@ -438,6 +439,7 @@
 "Other","Autre"
 "Others","Autres"
 "Overwrite Columns","Ecraser les colonnes"
+"Own Value","Valeur propre"
 "Page Number","Numéro de page"
 "Page Size","Taille de page"
 "Pagination Values","Valeurs de pagination"
