- reworked the way the base profile is handled - reduced complexity in various places - various bug fixes

--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -73,10 +73,11 @@
 "Available variables : <strong>{is_eu_country}</strong>, <strong>{country_code}</strong>, <strong>{country_name}</strong><br />(variables will be replaced by the corresponding values).<br />If no value is set, ""<strong>{is_eu_country}</strong>"" will be used by default","Variables disponibles : <strong>{is_eu_country}</strong>, <strong>{country_code}</strong>, <strong>{country_name}</strong><br />(les variables seront remplacées par les valeurs correspondantes).<br />Si aucune valeur n'est renseignée, ""<strong>{is_eu_country}</strong>"" sera utilisé par défaut"
 "Back","Retour"
 "Background Colors","Couleurs de fond"
+"Base","Base"
 "Base Class","Classe de base"
 "Base Configuration","Configuration - Base"
 "Base Display Format","Format d'affichage de base"
-"Base profile (""Default"")","Profil de base (""Défaut"")"
+"Base profile","Profil de base"
 "Behaviour When Unverified Grid Block","Comportement en cas de bloc de grille non vérifié"
 "Behaviour When Unverified Grid Collection","Comportement en cas de collection de grille non vérifiée"
 "Billing Address","Adresse de facturation"
@@ -98,7 +99,7 @@
 "Choose ""<strong>Yes</strong>"" if the field contains multiple values separated by a given string","Choisissez ""<strong>Oui</strong>"" si le champ contient de multiples valeurs séparées par une chaîne donnée"
 "Choose ""<strong>Yes</strong>"" if you do not want the field labels to be displayed in the header","Choissez ""<strong>Oui</strong>"" si vous ne voulez pas que les libellés des champs soient affichés en en-tête"
 "Choose ""<strong>Yes</strong>"" to display IDs instead of names","Choisissez ""<strong>Oui</strong>"" pour afficher les identifiants plutôt que les noms"
-"Choose ""<strong>Yes</strong>"" to filter on products that use system configuration values or not. Else, the filter type will depend on the type of the field","Choisissez ""<strong>Oui</strong>"" pour filtrer sur les produits utilisant les valeurs de la configuration système. Sinon, le type de filtre dépendra de celui du champ"
+"Choose ""<strong>Yes</strong>"" to filter on products that use system configuration values or not. Else, the filter type will depend on the type of the field","Choisissez ""<strong>Oui</strong>"" pour filtrer sur les produits utilisant les valeurs de la configuration système ou pas. Sinon, le type de filtre dépendra de celui du champ"
 "Choose ""<strong>Yes</strong>"" to make the base pagination values be added to the custom ones","Choisissez ""<strong>Oui</strong>"" pour que les valeurs de pagination de base soient ajoutées à celles personnalisées"
 "Choose ""<strong>Yes</strong>"" to use a custom source of EU countries.<br /><strong>For Magento versions < 1.7, you should always use this option as there is no base EU countries list by default</strong>","Choisissez ""<strong>Oui</strong>"" pour utiliser une source personnalisée de pays de l'UE.<br /><strong>Pour les versions de Magento < 1.7, vous devriez toujours utiliser cette option étant donné qu'il n'existe aucune liste de pays de l'UE par défaut</strong>"
 "Choose a processor if you want the CMS content to be treated. Unless you know there is a difference, you can consider that both block and page template processors are the same","Choisissez un processeur si vous voulez que le contenu CMS soit traité. A moins que vous ne sachiez qu'il y a une différence, vous pouvez considérer les deux processeurs comme équivalents"
@@ -298,11 +299,11 @@
 "Filter mode shortcut is not enabled (used in ""%s"")","Le raccourci pour le mode de filtrage n'est pas activé (utilisé dans ""%s"")"
 "Filter on Item Name","Filtrer sur le nom des articles"
 "Filter on Item SKU","Filtrer sur la référence des articles"
-"Filter on ""Use Config""","Filtrer sur ""Utiliser les paramètres de la configuration"""
 "Filtered products will have to belong to a number of categories amongst the chosen ones, that can be verified using this value and the one from the ""<strong>Custom Filter - Operator</strong>"" field","Les produits filtrés devront appartenir à un nombre de catégories parmi celles choisies, qui peut être vérifié en utilisant cette valeur et celle du champ ""<strong>Filtre personnalisé - Opérateur</strong>"""
 "Filtered products will have to belong to a number of categories amongst the chosen ones, that can be verified using this value and the one from the ""<strong>Custom Filter - Number</strong>"" field","Les produits filtrés devront appartenir à un nombre de catégories parmi celles choisies, qui peut être vérifié en utilisant cet opérateur et celle du champ ""<strong>Filtre personnalisé - Nombre</strong>"""
 "Filtering","Filtrage"
 "Filters","Filtres"
+"First available profile (undetermined order)","Premier profil disponible (ordre indéterminé)"
 "First Name","Prénom"
 "Flat Value Key","Clé de la valeur à plat"
 "for filtering only","pour filtrage seulement"
@@ -338,6 +339,7 @@
 "Hide Original Export Block","Cacher le bloc d'export d'origine"
 "Hide Original Filter Reset Button","Cacher le bouton de réinitialisation de filtre d'origine"
 "ID","ID"
+"If an user has no available profile, the base profile will automatically be available for him, regardless of its assignations","Si un utilisateur n'a aucun profil disponible, le profil de base sera automatiquement disponible pour lui, quelles que soient ses assignations"
 "If needed, indicate here the level on which to stop ascent for the full paths display. At least one level will be displayed in all cases, even if the concerned category has a lower level","Si besoin, indiquez ici le niveau sur lequel arrêter la remontée dans les chemins complets. Au moins un niveau sera affiché dans tous les cas, même si la catégorie concernée a un niveau inférieur"
 "If no currency is found with choosen column, the base currency will be used","Si aucune devise n'est trouvée avec la colonne choisie, la devise de base sera utilisée"
 "If no ID is found, the value corresponding to the given key will be displayed. If none is set, ""<strong>store_name</strong>"" will be used","Si aucun identifiant n'est trouvé, alors la valeur correspondant à la clé donnée sera affichée. Si rien n'est renseigné, ""<strong>store_name</strong>"" sera utilisé"
@@ -439,7 +441,6 @@
 "Other","Autre"
 "Others","Autres"
 "Overwrite Columns","Ecraser les colonnes"
-"Own Value","Valeur propre"
 "Page Number","Numéro de page"
 "Page Size","Taille de page"
 "Pagination Values","Valeurs de pagination"
@@ -585,6 +586,7 @@
 "The value edit block could not be retrieved","Le bloc d'édition de la valeur n'a pas pû être récupéré"
 "There is no removable default parameter","Il n'y a aucun paramètre par défaut à supprimer"
 "There is no value to save","Il n'y a aucune valeur à sauvegarder"
+"There is not any available profile","Il n'y a aucun profil disponible"
 "This attribute is locked","Cet attribut est verrouillé"
 "This attribute is not editable for bundle products","Cet attribut n'est pas éditable pour les produits packagés"
 "This attribute is not editable for this product","Cet attribut n'est pas éditable pour ce produit"
