Typo fix for "occurred"

--- a/app/locale/de_DE/BL_CustomGrid.csv
+++ b/app/locale/de_DE/BL_CustomGrid.csv
@@ -22,10 +22,10 @@
 "Allow","Erlauben"
 "Allow Filtering On Time","Filtern nach Zeit erlauben"
 "Allow SQL Wildcards In Filter","SQL Wildcards in Filtern erlauben"
-"An error occured while initializing order items","Beim Initialisieren der Bestell-Artikel ist ein Fehler aufgetreten"
-"An error occured while initializing items block","Beim Initialisieren des Items-Blocks ist ein Fehler aufgetreten"
-"An error occured while eval()ing the rewrite code : ""%s""","Beim eval()en des Rewrite-Codes ist ein Fehler aufgetreten : ""%s"""
-"An error occured while rewriting ""%s"" : ""%s"" (rewriter: ""%s"")","Beim Rewriten von ""%s"" ist ein Fehler aufgetreten : ""%s"" (Überschreiber : ""%s"")"
+"An error occurred while initializing order items","Beim Initialisieren der Bestell-Artikel ist ein Fehler aufgetreten"
+"An error occurred while initializing items block","Beim Initialisieren des Items-Blocks ist ein Fehler aufgetreten"
+"An error occurred while eval()ing the rewrite code : ""%s""","Beim eval()en des Rewrite-Codes ist ein Fehler aufgetreten : ""%s"""
+"An error occurred while rewriting ""%s"" : ""%s"" (rewriter: ""%s"")","Beim Rewriten von ""%s"" ist ein Fehler aufgetreten : ""%s"" (Überschreiber : ""%s"")"
 "Applies by default the use of an ""options"" renderer with customer group values (still overridable by rendering options)","Wendet standardmäßig die Benutzung eines ""Optionen"" Renderers mit Kundengruppen-Werten an (kann immer noch durch Rendering-Optionen überschrieben werden)"
 "Apply","Anwenden"
 "Apply Configuration","Konfiguration anwenden"
