--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -27,29 +27,29 @@
 "Allow SQL Wildcards In Filter","Autoriser les wildcards SQL dans le filtre"
 "Allows to specify the filter mode directly in the filter field, by placing the corresponding code between square brackets at the beginning of the searched value.<br />Eg, use ""<strong>[el]</strong>Example"" to search for ""Example"" using ""LIKE (exact)"".<br />If no filter mode is indicated in the field, the value of ""Filter Mode"" will be used by default","Permet de spécifier le mode de filtrage directement depuis le champ du filtre, en plaçant le code correspondant entre crochets au début de la valeur recherchée.<br />Par exemple, utilisez ""<strong>[el]</strong>Exemple"" pour faire une recherche sur ""Exemple"" en utilisant ""LIKE (exact)"".<br />Si aucun mode de filtrage n'est indiqué dans le champ, alors la valeur de ""Mode de filtrage"" sera utilisée par défaut"
 "Allows to trigger negative filter directly from the filter field, by placing the character ""<strong>!</strong>"" between square brackets at the beginning of the searched value (eg: ""<strong>[!]</strong>Example"").<br />If the code of a filter mode is already present in the value, place the character ""<strong>!</strong>"" in front of it (eg: ""<strong>[!el]</strong>Example"")","Permet de déclencher le filtrage négatif directement depuis le champ du filtre, en plaçant le caractère ""<strong>!</strong>"" entre crochets au début de la valeur recherchée (par exemple : ""<strong>[!]</strong>Exemple"").<br />Si le code d'un mode de filtrage est déjà présent dans la valeur, alors placec le caractère ""<strong>!</strong>"" devant (par exemple : ""<strong>[!el]</strong>Exemple"")"
-"An error occured while applying the action","Une erreur est survenue à l'application de l'action"
-"An error occured while applying the values","Une erreur est survenue à l'application des valeurs"
-"An error occured while deleting a grid","Une erreur est survenue à la suppression d'une grille"
-"An error occured while deleting an options source","Une erreur est survenue à la suppression d'une source d'options"
-"An error occured while deleting the grid","Une erreur est survenue à la suppression de la grille"
-"An error occured while disabling a grid","Une erreur est survenue à la désactivation d'une grille"
-"An error occured while disabling the grid","Une erreur est survenue à la désactivation de la grille"
-"An error occured while editing the value","Une erreur est survenue à l'édition de la valeur"
-"An error occured while enabling a grid","Une erreur est survenue à l'activation d'une grille"
-"An error occured while enabling the grid","Une erreur est survenue à l'activation de la grille"
-"An error occured while eval()ing the rewrite code : ""%s""","Une erreur est survenue à l'eval()uation du code de la réécriture : ""%s"""
-"An error occured while exporting grid results","Une erreur est survenue à l'export des résultats de la grille"
-"An error occured while initializing items","Une erreur est survenue à l'initialisation des articles"
-"An error occured while initializing items block","Une erreur est survenue à l'initialisation du bloc des articles"
-"An error occured while initializing the edit form","Une erreur est survenue à l'initialisation du formulaire d'édition"
-"An error occured while reapplying the default filter","Une erreur est survenue à la réapplication du filtre par défaut"
-"An error occured while rewriting ""%s"" : ""%s"" (rewriter: ""%s"")","Une erreur est survenue à la réécriture de ""%s"" : ""%s"" (réécriveur : ""%s"")"
-"An error occured while saving the columns","Une erreur est survenue à la sauvegarde des colonnes"
-"An error occured while saving the custom columns","Une erreur est survenue à la sauvegarde des colonnes personnalisées"
-"An error occured while saving the default parameters","Une erreur est survenue à la sauvegarde des paramètres par défaut"
-"An error occured while saving the grid","Une erreur est survenue à la sauvegarde de la grille"
-"An error occured while saving the grid infos","Une erreur est survenue à la sauvegarde des infos de la grille"
-"An error occured while saving the values","Une erreur est survenue à la sauvegarde des valeurs"
+"An error occurred while applying the action","Une erreur est survenue à l'application de l'action"
+"An error occurred while applying the values","Une erreur est survenue à l'application des valeurs"
+"An error occurred while deleting a grid","Une erreur est survenue à la suppression d'une grille"
+"An error occurred while deleting an options source","Une erreur est survenue à la suppression d'une source d'options"
+"An error occurred while deleting the grid","Une erreur est survenue à la suppression de la grille"
+"An error occurred while disabling a grid","Une erreur est survenue à la désactivation d'une grille"
+"An error occurred while disabling the grid","Une erreur est survenue à la désactivation de la grille"
+"An error occurred while editing the value","Une erreur est survenue à l'édition de la valeur"
+"An error occurred while enabling a grid","Une erreur est survenue à l'activation d'une grille"
+"An error occurred while enabling the grid","Une erreur est survenue à l'activation de la grille"
+"An error occurred while eval()ing the rewrite code : ""%s""","Une erreur est survenue à l'eval()uation du code de la réécriture : ""%s"""
+"An error occurred while exporting grid results","Une erreur est survenue à l'export des résultats de la grille"
+"An error occurred while initializing items","Une erreur est survenue à l'initialisation des articles"
+"An error occurred while initializing items block","Une erreur est survenue à l'initialisation du bloc des articles"
+"An error occurred while initializing the edit form","Une erreur est survenue à l'initialisation du formulaire d'édition"
+"An error occurred while reapplying the default filter","Une erreur est survenue à la réapplication du filtre par défaut"
+"An error occurred while rewriting ""%s"" : ""%s"" (rewriter: ""%s"")","Une erreur est survenue à la réécriture de ""%s"" : ""%s"" (réécriveur : ""%s"")"
+"An error occurred while saving the columns","Une erreur est survenue à la sauvegarde des colonnes"
+"An error occurred while saving the custom columns","Une erreur est survenue à la sauvegarde des colonnes personnalisées"
+"An error occurred while saving the default parameters","Une erreur est survenue à la sauvegarde des paramètres par défaut"
+"An error occurred while saving the grid","Une erreur est survenue à la sauvegarde de la grille"
+"An error occurred while saving the grid infos","Une erreur est survenue à la sauvegarde des infos de la grille"
+"An error occurred while saving the values","Une erreur est survenue à la sauvegarde des valeurs"
 "Another profile from the same grid already has this name","Un autre profil de la même grille porte déjà ce nom"
 "Applies by default the use of an ""options"" renderer with customer group values (still overridable by rendering options)","Applique par défaut l'utilisation d'un rendu ""Options"" avec les valeurs des groupes client (écrasable par les options de rendu)"
 "Apply","Appliquer"
