- added "weight" custom column for the orders grid - adapted the definition of the "customer_email" custom column for version 1.0.0

--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -654,6 +654,7 @@
 "View Grids List","Voir la liste des grilles"
 "Visible","Visible"
 "Warning:","Attention :"
+"Weight","Poids"
 "When an image height is specified, the image width is also required","Quand une hauteur d'image est spécifiée, la largeur d'image est également requise"
 "When an image width is specified, the image height is also required","Quand une largeur d'image est spécifiée, la hauteur d'image est également requise"
 "Width","Largeur"
