added "weight" custom column for the orders grid

--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -506,6 +506,7 @@
 "Varien_Object Collection","Collection de Varien_Object"
 "View Grids Informations","Voir les informations des grilles"
 "Visible","Visible"
+"Weight","Poids"
 "Width","Largeur"
 "Wildcard for single character","Wildcard pour un seul caractère"
 "Wildcard for multiple characters","Wildcard pour de multiples caractères"
