added "product frontend link" custom column for the products grid (experimental)

--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -204,6 +204,7 @@
 "Default Parameters","Paramètres par défaut"
 "Default Parameters Behaviours","Comportements des paramètres par défaut"
 "Default Parameters Behaviours - Default Values","Comportements des paramètres par défaut - Valeurs par défaut"
+"Default Store View","Vue magasin par défaut"
 "Default Values","Valeurs par défaut"
 "Delete","Supprimer"
 "Delete File Before Save","Supprimer le fichier avant la sauvegarde"
@@ -237,6 +238,7 @@
 "Displays an IP address","Affiche une adresse IP"
 "Displays for each product all the categories it's associated to","Affiche pour chaque produit toutes les catégories auxquelles il est associé"
 "Displays formatted date + time","Affiche une date avec un temps formatés"
+"Displays the frontend link of each product","Affiche le lien frontend pour chaque produit"
 "Displays the number of carts containing each product","Affiche le nombre de paniers contenant chaque produit"
 "Displays the number of wishlists containing each product","Affiche le nombre de listes d'envies contenant chaque produit"
 "Displays the quantity of each product contained in carts","Affiche la quantité de chaque produit contenue dans des paniers"
@@ -322,6 +324,7 @@
 "Forcing or merging a value only applies when it does exist","Forcer ou fusionner une valeur ne s'applique que lorsqu'elle existe"
 "Format","Format"
 "From Result","A partir du résultat"
+"Frontend Link","Lien frontend"
 "Full","Complet"
 "General","Général"
 "Global","Global"
@@ -351,6 +354,7 @@
 "If no value is set, ""<strong>,</strong>"" will be used","Si aucune valeur n'est définie, ""<strong>,</strong>"" sera utilisé"
 "If no value is set, ""<strong>, </strong>"" will be used","Si aucune valeur n'est définie, ""<strong>, </strong>"" sera utilisé"
 "If no value is set, the base display format will be used","Si aucune valeur n'est renseignée, le format d'affichage de base sera utilisé"
+"If no value is set, the URL will be used","Si aucune valeur n'est renseignée, l'URL sera utilisée"
 "If you choose ""<strong>No</strong>"", filter will apply on images existence","Si vous choisissez ""<strong>Non</strong>"", le filtre s'appliquera à l'existence des images"
 "If you choose ""<strong>No</strong>"", only the images paths within the media/catalog directory will be displayed","Si vous choisissez ""<strong>Non</strong>"", seulement les chemins des images dans le répertoire media/catalog seront affichés"
 "If you choose ""<strong>No</strong>"", only the images URLs will be displayed (otherwise, the URLs will be used as titles)","Si vous choisissez ""<strong>Non</strong>"", seulement les URLs des images seront affichées (sinon, les URLs seront utilisées comme titres)"
@@ -388,6 +392,7 @@
 "Lesser than","Inférieur à"
 "Lesser than or equal to","Inférieur ou égal à"
 "Levels Separator","Séparateur de niveaux"
+"Link Title","Titre du lien"
 "List","Liste"
 "Log Error Messages","Logger les messages d'erreur"
 "Log Error Messages If Rewrite Success","Logger les messages d'erreur si succès de la réécriture"
@@ -438,6 +443,7 @@
 "Only for columns with time values","Seulement pour les colonnes avec des valeurs de temps"
 "Only Logged In Carts","Seulement les paniers connectés"
 "Only Shared Wishlists","Seulement les listes partagées"
+"Open Link in a New Window","Ouvrir le lien dans une nouvelle fenêtre"
 "Options","Options"
 "Options Array","Tableau d'options"
 "Options Hash","Hash d'options"
@@ -641,6 +647,8 @@
 "Use drag'n'drop for sorting columns","Utiliser le drag'n'drop pour le tri des colonnes"
 "Use Grid","Utiliser la grille"
 "Use Grid Store View","Vue magasin de la grille"
+"Use URL Rewriting","Utiliser la réécriture d'URL"
+"Used by default if the current store view for the column is ""<strong>All Store Views</strong>"" or ""<strong>Default Values</strong>"". If none is chosen, the first available store view will be used","Utilisée par défaut quand la vue magasin courante pour la colonne est ""<strong>Toutes les vues magasin</strong>"" ou ""<strong>Valeurs par défaut</strong>"". Si aucune n'est choisie, la première vue magasin disponible sera utilisée"
 "Used for attributes with multiple values","Utilisé pour les attributs à multiples valeurs"
 "Used when image dimensions are specified.<br />If you choose ""<strong>Yes</strong>"", the original full-size images will be used and resized, when needed, by your web browser only (regarding images URLs, only the original ones will likewise be displayed in all cases)","Utilisé quand les dimensions d'image sont spécifiées.<br />Si vous choisissez ""<strong>Oui</strong>"", les images originales de pleine grandeur seront utilisées et redimensionnées, quand c'est nécessaire, par votre navigateur web seulement (concernant les URLs d'images, seulement celles originales seront affichées également)"
 "User default profile","Profil par défaut de l'utilisateur"
