reduced code complexity / duplication (experimental)

--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -449,8 +449,7 @@ Cannot save value : the JS object of the editor cannot be found,Impossible de sa
 "Permissions: %s","Permissions : %s"
 "Pin Pager And Mass-Actions Block","Epingler le pager et le bloc des actions de masse"
 "Please confirm profile switching. All data that hasn't been saved will be lost.","Confirmez-vous le changement de profil ? Toutes les données non sauvegardées seront perdues."
-"Please select grids to update","Veuillez sélectionner des grilles à mettre à jour"
-"Please select options sources to update","Veuillez sélectionner des sources d'options à mettre à jour"
+"Please select values to update","Veuillez sélectionner des valeurs à mettre à jour"
 "Polls","Sondages"
 "Prefix","Préfixe"
 "Prefix that will be prepended to the values coming from the system configuration","Préfixe qui sera ajouté aux valeurs venant de la configuration système"
